syntax = "proto3";
option cc_enable_arenas = true;

package dp_credit_scoring;

message LearnerState {
  string owner = 1;
  bytes model = 2;
}

message CreateRequest {
  string requester = 1;
}

message CreateResponse {
  string log = 1;
}

message TrainingRequest {
  string requester = 1;
  Matrix inputs = 2;
  repeated float targets = 3;
}

message TrainingResponse {
  string log = 1;
}

message InferenceRequest {
  string requester = 1;
  Matrix inputs = 2;
}

message InferenceResponse {
  repeated float predictions = 1;
  string log = 2;
}

message Matrix {
  int32 rows = 1;
  int32 cols = 2;
  repeated float data = 3;
}

message Dataset {
  Matrix train_inputs = 1;
  repeated float train_targets = 2;
  Matrix test_inputs = 3;
  repeated float test_targets = 4;
}
